<resources>
    <string name="word_confirm">Konfirmasi</string>
    <string name="word_notice_alert">Pemberitahuan</string>
    <string name="expand_string">Lainnya</string>
    <string name="collapsed_string">Tutup</string>
    <string name="msg_alert_login_join">Ini adalah layanan khusus member.</string>
    <string name="word_login_join">Masuk / Daftar</string>
    <string name="word_cancel">Batal</string>
    <string name="word_google_login">Masuk dengan Google</string>
    <string name="msg_grant_permission_title">Instruksi otorisasi</string>
    <string name="msg_grant_permission_desc">Untuk menggunakan WOWBOX  \n Silakan izinkan izin di bawah ini.</string>
    <string name="msg_notification_permission_title">Mengirim pemberitahuan</string>
    <string name="msg_notification_permission_desc">Saya menyetujui izin pemberitahuan untuk menerima berita acara langsung dari WOWBOX.</string>
    <string name="msg_disconnected_network">Anda tidak terhubung ke jaringan.</string>
    <string name="msg_check_network_status">Silakan periksa status koneksi jaringan Anda,\nSilakan coba lagi.</string>
    <string name="server_error_default">Kami mohon maaf atas ketidaknyamanan ini.\nSilakan coba lagi nanti.</string>
    <string name="msg_grant_permission">Menyetujui izin</string>
    <string name="msg_alert_notification_permission_denied">Anda telah menolak izin untuk mengirim pemberitahuan.\nUntuk mengizinkan izin\n[Pengaturan] &gt; [Aplikasi] &gt; [WOWBOX] &gt; [Pemberitahuan]\nUntuk mengizinkan pemberitahuan, izinkan izinnya.</string>
    <string name="msg_server_checking">Server sedang diperiksa. \nSilakan coba lagi nanti.</string>
    <string name="msg_minor_update">Versi baru telah diperbarui.\nApakah Anda ingin memperbarui?</string>
    <string name="word_update">Perbarui</string>
    <string name="msg_major_update">Layanan WOWBOX\nFitur baru telah ditambahkan.\nSilakan lanjutkan dengan pembaruan.</string>
    <string name="word_join">Daftar</string>
    <string name="html_join_nation_title">Pilih negara&lt;font color=#ea5506&gt;*&lt;/font&gt;</string>
    <string name="html_join_nickname_title">Nama panggilan&lt;font color=#ea5506&gt;*&lt;/font&gt;</string>
    <string name="html_join_email_title">Email&lt;font color=#ea5506&gt;*&lt;/font&gt;</string>
    <string name="msg_input_nickname">Masukkan nama kamu.</string>
    <string name="msg_input_change_nickname">Masukkan nama panggilan yang ingin Anda ubah.</string>
    <string name="msg_input_email">Masukkan email Anda.</string>
    <string name="msg_select_birthday">Pilih tanggal lahir Anda.</string>
    <string name="msg_input_recommend_key">Silakan masukkan kode referral</string>
    <string name="html_join_recommend_key_desc">Masukkan kode referral Anda dan Anda akan menerima &lt;font color=#ff5e5e&gt;&lt;b&gt;%1$sP&lt;/b&gt;&lt;/font&gt;</string>
    <string name="word_duple_check">Cek duplikat</string>
    <string name="word_my_recommend_key">Kode Referral Saya</string>
    <string name="msg_invite_receive_benefit">Undang dan dapatkan hadiah</string>
    <string name="word_total_agree">Setuju</string>
    <string name="word_view_contents">Lihat konten</string>
    <string name="word_complete">Selesai</string>
    <string name="word_select">Pilih</string>
    <string name="msg_usable_nickname">Nama panggilan tersedia.</string>
    <string name="msg_input_email_id">Masukkan ID email.</string>
    <string name="format_msg_input_over">Masukkan setidaknya %1$d karakter.</string>
    <string name="msg_duplicate_nickname">Nama panggilan sudah digunakan.</string>
    <string name="msg_check_duplicate_nickname">Silakan periksa apakah ada nama panggilan ganda.</string>
    <string name="msg_select_nation">Silakan pilih negara Anda.</string>
    <string name="msg_agree_terms">Mohon terima syarat dan ketentuan.</string>
    <string name="msg_failed_join">Gagal mendaftar ke taman.</string>
    <string name="word_this_week_win_price">Hadiah minggu ini</string>
    <string name="msg_lotto_guide">Apa itu CONTEST?</string>
    <string name="word_daily_bonus">Bonus Harian</string>
    <string name="word_join_history">Partisipasi</string>
    <string name="word_winner">Pemenang</string>
    <string name="word_use_method">Bagaimana cara menggunakan</string>
    <string name="format_lottery_round">%1$s kali</string>
    <string name="msg_lotto_announce_date">Tanggal Pengundian</string>
    <string name="msg_lotto_announce_date_format">dd.MM.yyyy</string>
    <string name="msg_quit">Tekan tombol \'Kembali\' sekali lagi untuk keluar.</string>
    <string name="msg_make_buff_wallet">Membuat Buff Wallet</string>
    <string name="word_point">Poin</string>
    <string name="word_retention_point">Poin Saya</string>
    <string name="word_retention_ball">Lucky Ball Saya</string>
    <string name="word_retention_candy">Candy yang di simpan</string>
    <string name="word_luckyball_q">Lucky Ball?</string>
    <string name="word_luckyball_earned_method">Cara mendapatkan Lucky Balls</string>
    <string name="word_gift_shop">Gift shop </string>
    <string name="word_gift_card">Gift card</string>
    <string name="word_goods_shop">Merchandise shop</string>
    <string name="word_exchange_candy">Ubah ke candy</string>
    <string name="word_exchange_buff_coin">Beralih ke Buff coin</string>
    <string name="word_exchange_buff">Beralih ke BUFF</string>
    <string name="word_exchange_point">Beralih ke Poin</string>
    <string name="word_exchange_luckyball">Alihkan ke lucky balls</string>
    <string name="msg_exchange_luckyball">Beralih ke lucky balls</string>
    <string name="msg_exchange_luckyball_desc">Anda dapat dikonversi poin ke Lucky Balls</string>
    <string name="word_exchange_luckyball_amount">Jumlah lucky balls yang akan ditukar</string>
    <string name="msg_input_exchange_luckyball_amount">Masukkan jumlah lucky balls yang ingin Anda tukar</string>
    <string name="html_exchange_luckyball_maximum">Jumlah maksimum lucky balls yang dapat Anda tukarkan &lt;font color=#ff5e5e&gt;&lt;b&gt;%1$s&lt;/b&gt;&lt;/font&gt;</string>
    <string name="msg_join">Mengikuti</string>
    <string name="word_etc">Lainnya</string>
    <string name="word_gift_shop_history">Riwayat pembelian Gift Shop</string>
    <string name="word_goods_shop_history">Riwayat pembelian merchandise shop</string>
    <string name="word_invite_friend">Undang Teman</string>
    <string name="word_invite">Undang</string>
    <string name="word_invite_friend_event">Event undang teman</string>
    <string name="msg_invite_friend_event_desc">Nomor pemenang Lotere Korea resmi\n Ini adalah acara untuk memilih pemenang.</string>
    <string name="msg_invite_gift_desc1">Untuk setiap 1 orang yang Anda undang</string>
    <string name="msg_invite_gift_desc2">50 tiket CONTEST</string>
    <string name="msg_invite_gift_desc3">Untuk setiap 5 orang yang Anda undang</string>
    <string name="msg_invite_gift_desc4">1 Balls untuk setiap 5 undangan</string>
    <string name="msg_inquiry">Hubungi kami</string>
    <string name="word_inquiry_history">Hubungi Kami</string>
    <string name="word_notice">Pengumuman</string>
    <string name="word_setting">Pengaturan</string>
    <string name="format_joinable_remain_minute">Anda memiliki waktu %1$s menit dan %2$s detik lagi untuk bergabung.</string>
    <string name="format_joinable_remain_seconds">Anda memiliki %1$s seconds tersisa sampai Anda dapat berpartisipasi.</string>
    <string name="msg_minute_join_desc">Semakin banyak entri yang anda buat, semakin besar kesempatan anda untuk menang.</string>
    <string name="msg_lottery_join_progress">Anda memasuki CONTEST.</string>
    <string name="msg_lotto_join_complete">Entri CONTEST anda telah selesai.</string>
    <string name="format_input_number">Masukkan nomor di bawah ini untuk mencegah makro.  \nSilakan masukkan nomor %1$s.</string>
    <string name="msg_invalid_number">Angka-angkanya tidak cocok.</string>
    <string name="format_ball_unit">%1$s</string>
    <string name="msg_over_enable_exchange_ball">Anda telah melebihi jumlah Balls yang dapat ditukarkan.</string>
    <string name="msg_completed_exchange_ball">Penukaran Balls selesai.</string>
    <string name="msg_lack_point">Anda kehabisan poin.</string>
    <string name="msg_lack_ball">Anda kehabisan Balls.</string>
    <string name="msg_alert_exchange_luckyball_title">Apakah Anda ingin menukar ke Lucky Balls?</string>
    <string name="msg_alert_exchange_luckyball_desc">Balls yang telah ditukar\nTidak dapat dikonversi kembali menjadi poin.</string>
    <string name="msg_exchange">Konversi</string>
    <string name="word_exchange_luckyball_complete">Konversi Balls selesai</string>
    <string name="msg_exchange_luckyball_complete_desc">Anda dapat memeriksa Permen Anda yang telah dikonversi di [Saya] &gt; [Balls] di bawah [Balls].\nDi [Saya] &gt; [Balls].</string>
    <string name="word_minus_point">Poin dikurangi</string>
    <string name="word_exchanged_luckyball">Konversi Balls</string>
    <string name="msg_buff_coin_desc">BUFF adalah koin eksklusif (WOWBOX) yang berbasis blockchain.</string>
    <string name="msg_do_not_show_again">Lihat lagi</string>
    <string name="word_close">Tutup</string>
    <string name="word_lottery_join_date">Tanggal Masuk</string>
    <string name="format_lotto_my_join_count_title">%1$s Jumlah entri dalam putaran</string>
    <string name="format_lotto_my_join_count">Nomor %1$s</string>
    <string name="msg_not_exist_lottery_join_list">Saya tidak memiliki entri.</string>
    <string name="format_lotto_win_number">Nomor Pemenang Kontes Sebanyak %1$s</string>
    <string name="word_win_status2">Status Kemenangan</string>
    <string name="word_grade">Angka yang sama</string>
    <string name="word_total_win_prize">Total Kemenangan</string>
    <string name="word_win_prize_per_person">Kemenangan per orang</string>
    <string name="word_winner_count">Jumlah pemenang</string>
    <string name="format_count_unit6">%1$s lembar</string>
    <string name="word_recommend_code">Kode Referral</string>
    <string name="msg_withdrawal_auth_phone_desc">Untuk mencegah pencurian ilegal dan kerusakan pada kepentingan Anda\nSilakan lanjutkan dengan proses verifikasi nomor telepon.</string>
    <string name="msg_withdrawal_reason_desc">Mohon beritahu kami alasan Anda berhenti berlangganan.\nKami akan menggunakannya sebagai sumber daya penting untuk peningkatan layanan.</string>
    <string name="msg_withdrawal_reason1">Tujuan penghapusan catatan</string>
    <string name="msg_withdrawal_reason2">Karena tidak nyaman untuk digunakan dan saya memiliki banyak disabilitas</string>
    <string name="msg_withdrawal_reason3">Saya tidak tertarik dengan layanan ini</string>
    <string name="msg_withdrawal_reason4">Saya jarang menggunakan layanan ini</string>
    <string name="msg_input_withdrawal_reason">Masukkan alasan Anda untuk berhenti berlangganan.</string>
    <string name="msg_join_complete">Selamat bergabung dengan\nWowbox!</string>
    <string name="msg_join_complete2">Dapatkan Lucky Ball dan coba tantangan untuk\nmemenangkan hadiah yang kamu inginkan.</string>
    <string name="msg_report">Laporan</string>
    <string name="msg_report_option1">Komersial/Promosi</string>
    <string name="msg_report_option2">Kata-kata tidak senonoh/Serangan pribadi</string>
    <string name="msg_report_option3">Informasi ilegal</string>
    <string name="msg_report_option4">Pemaparan informasi pribadi</string>
    <string name="msg_report_option5">Kecabulan/Seksualitas</string>
    <string name="msg_report_option6">Pengulangan konten yang sama</string>
    <string name="msg_report_option7">Alasan lain</string>
    <string name="msg_input_etc_reason">Silakan masukkan alasan lain.</string>
    <string name="word_verify_mobile_number">Verifikasi Nomor Telepon</string>
    <string name="msg_input_recommend_key_desc">*Gunakan kode referral untuk mendapatkan 2 Lucky Ball</string>
</resources>