<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.my.ui.WithdrawalAuthFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/width_44"
            android:paddingEnd="@dimen/width_44"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/height_102"
                android:text="@string/word_verify_mobile_number"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_66pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_withdrawal_auth_phone_desc"
                android:textColor="@color/color_454545"
                android:layout_marginTop="@dimen/height_36"
                android:textSize="@dimen/textSize_38pt" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_102"
            android:background="@drawable/bg_f7f7f7_radius_55"
            android:orientation="vertical"
            android:paddingStart="@dimen/width_50"
            android:paddingTop="@dimen/height_44"
            android:paddingEnd="@dimen/width_50"
            android:paddingBottom="@dimen/height_44">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_withdrawal_reason_desc"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_38pt" />

            <TextView
                android:id="@+id/text_withdrawal_auth_reason1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_44pt"
                android:layout_marginTop="@dimen/height_55"
                android:drawablePadding="@dimen/width_22"
                android:textColor="@color/color_333333"
                android:text="@string/msg_withdrawal_reason1"
                app:drawableStartCompat="@drawable/btn_check" />

            <TextView
                android:id="@+id/text_withdrawal_auth_reason2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_44pt"
                android:layout_marginTop="@dimen/height_55"
                android:drawablePadding="@dimen/width_22"
                android:textColor="@color/color_333333"
                android:text="@string/msg_withdrawal_reason2"
                app:drawableStartCompat="@drawable/btn_check" />

            <TextView
                android:id="@+id/text_withdrawal_auth_reason3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_44pt"
                android:layout_marginTop="@dimen/height_55"
                android:drawablePadding="@dimen/width_22"
                android:textColor="@color/color_333333"
                android:text="@string/msg_withdrawal_reason3"
                app:drawableStartCompat="@drawable/btn_check" />

            <TextView
                android:id="@+id/text_withdrawal_auth_reason4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_44pt"
                android:layout_marginTop="@dimen/height_55"
                android:drawablePadding="@dimen/width_22"
                android:textColor="@color/color_333333"
                android:text="@string/msg_withdrawal_reason4"
                app:drawableStartCompat="@drawable/btn_check" />

            <TextView
                android:id="@+id/text_withdrawal_auth_reason_etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_44pt"
                android:layout_marginTop="@dimen/height_55"
                android:drawablePadding="@dimen/width_22"
                android:textColor="@color/color_333333"
                android:text="@string/word_etc"
                app:drawableStartCompat="@drawable/btn_check" />

            <EditText
                android:id="@+id/edit_withdrawal_auth_reason_etc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_252"
                android:layout_marginTop="@dimen/height_55"
                android:background="@drawable/bg_eeeeee_radius_33"
                android:gravity="top"
                android:hint="@string/msg_input_withdrawal_reason"
                android:orientation="horizontal"
                android:paddingStart="@dimen/width_30"
                android:paddingEnd="@dimen/width_30"
                android:paddingTop="@dimen/height_33"
                android:paddingBottom="@dimen/height_33"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_898989"
                android:textSize="@dimen/textSize_38pt" />


        </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/text_withdrawal_auth_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_135"
                android:background="@drawable/bg_eeeeee_radius_27"
                android:layout_marginTop="@dimen/height_69"
                android:gravity="center"
                android:layout_marginBottom="@dimen/height_250"
                android:textColor="@color/white"
                android:text="@string/word_verify_mobile_number"
                android:textSize="@dimen/textSize_44pt"
                android:textStyle="bold"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>