<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.luckydraw.ui.LuckyDrawWinReplyReportActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/width_44"
            android:layout_marginTop="@dimen/height_102"
            android:layout_marginEnd="@dimen/width_44"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_lucky_draw_win_report1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_155"
                android:drawablePadding="@dimen/width_22"
                android:gravity="center"
                android:text="@string/msg_report_option1"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_44pt"
                app:drawableStartCompat="@drawable/btn_check" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@color/color_eeeeee" />

            <TextView
                android:id="@+id/text_lucky_draw_win_report2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_155"
                android:drawablePadding="@dimen/width_22"
                android:gravity="center"
                android:text="@string/msg_report_option2"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_44pt"
                app:drawableStartCompat="@drawable/btn_check" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@color/color_eeeeee" />

            <TextView
                android:id="@+id/text_lucky_draw_win_report3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_155"
                android:drawablePadding="@dimen/width_22"
                android:gravity="center"
                android:text="@string/msg_report_option3"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_44pt"
                app:drawableStartCompat="@drawable/btn_check" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@color/color_eeeeee" />


            <TextView
                android:id="@+id/text_lucky_draw_win_report4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_155"
                android:drawablePadding="@dimen/width_22"
                android:gravity="center"
                android:text="@string/msg_report_option4"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_44pt"
                app:drawableStartCompat="@drawable/btn_check" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@color/color_eeeeee" />

            <TextView
                android:id="@+id/text_lucky_draw_win_report5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_155"
                android:drawablePadding="@dimen/width_22"
                android:gravity="center"
                android:text="@string/msg_report_option5"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_44pt"
                app:drawableStartCompat="@drawable/btn_check" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@color/color_eeeeee" />

            <TextView
                android:id="@+id/text_lucky_draw_win_report6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_155"
                android:drawablePadding="@dimen/width_22"
                android:gravity="center"
                android:text="@string/msg_report_option6"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_44pt"
                app:drawableStartCompat="@drawable/btn_check" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@color/color_eeeeee" />

            <TextView
                android:id="@+id/text_lucky_draw_win_report_etc"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_155"
                android:drawablePadding="@dimen/width_22"
                android:gravity="center"
                android:text="@string/msg_report_option7"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textSize_44pt"
                app:drawableStartCompat="@drawable/btn_check" />


            <EditText
                android:id="@+id/edit_lucky_draw_win_report_etc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_252"
                android:background="@drawable/bg_f7f7f7_radius_33"
                android:gravity="top"
                android:hint="@string/msg_input_etc_reason"
                android:orientation="horizontal"
                android:paddingStart="@dimen/width_30"
                android:paddingTop="@dimen/height_33"
                android:paddingEnd="@dimen/width_30"
                android:paddingBottom="@dimen/height_33"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_898989"
                android:textSize="@dimen/textSize_38pt" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/text_lucky_draw_win_report"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_135"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/width_44"
        android:layout_marginEnd="@dimen/width_44"
        android:layout_marginBottom="@dimen/height_62"
        android:background="@drawable/bg_ea5506_radius_27"
        android:gravity="center"
        android:text="@string/msg_report"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_44pt"
        android:textStyle="bold" />

</RelativeLayout>